forgot to make some branches

--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
     <link rel='stylesheet' href="./styles/main.css">
 </head>
 <body>
-
+    <h1 class="text-center">Sandwich Maker</h1>
+    <div class="container">
+        <div class="row col">
+            <div id="bread-counter" class="food"></div>
+            <div id="meat-counter" class="food"></div>
+            <div id="cheese-counter" class="food"></div>
+            <div id="condiment-counter" class="food"></div>
+            <div id="veggie-counter" class="food"></div>
+        </div>
+        <div class="row col">
+            <div id="final-order"></div>
+        </div>
+    </div>
 
     <script type="module" src="./javascripts/main.js"></script>
 </body>
